Abolished ZEO_ERR_PCD_UNKNOWN_FIELDID. Defined ZEO_ERR_PCD_FAILED_TO_READ_DATA and ZEO_ERR_PCD_FAILED_TO_DECOMPRESS. Added _zPCDDataBINCOMFRead and modified zVec3DDataFReadPCD to read binary_compressed type of data in PCD file. Defined ZEO_ERR_PCD_UNKNOWN_VALUETYPE. Abolished ZEO_PCD_FIELD_NUM_MAX. Modified _zPCD and _zPCDFieldsFRead not to fix the size of the array of fields. Added _zPCDFieldAssignReadBINCOM and _zPCDFieldIsCoord. Defined DEF_zPCDFieldReadBINCOMFunc and __z_pcd_read_bincom. Renamed _zPCDDef and _zPCDType to _zPCDFieldType and _zPCDValueType, respectively. Modified zeo-config to use liblzf for decoding PCD. Added ZEO_PCD_DATATYPE_BINARY_COMPRESSED to _zPCDDataType. Added ZEO_PCD_LABEL and ZEO_PCD_RGBA to _zPCDDef. Modified zVec3DDataFReadPCD to allocate point data as a fixed-size array.

--- a/HISTORY
+++ b/HISTORY
@@ -1,10 +1,21 @@
+2024.12.13. Abolished ZEO_ERR_PCD_UNKNOWN_FIELDID. [zeo_errmsg, zeo_pointcloud]
+2024.12.13. Defined ZEO_ERR_PCD_FAILED_TO_READ_DATA and ZEO_ERR_PCD_FAILED_TO_DECOMPRESS. [zeo_errmsg, zeo_pointcloud]
+2024.12.13. Added _zPCDDataBINCOMFRead and modified zVec3DDataFReadPCD to read binary_compressed type of data in PCD file. [zeo_pointcloud]
+2024.12.13. Defined ZEO_ERR_PCD_UNKNOWN_VALUETYPE. [zeo_errmsg, zeo_pointcloud]
+2024.12.13. Abolished ZEO_PCD_FIELD_NUM_MAX. [zeo_pointcloud]
+2024.12.13. Modified _zPCD and _zPCDFieldsFRead not to fix the size of the array of fields. [zeo_pointcloud]
+2024.12.13. Added _zPCDFieldAssignReadBINCOM and _zPCDFieldIsCoord. [zeo_pointcloud]
+2024.12.13. Defined DEF_zPCDFieldReadBINCOMFunc and __z_pcd_read_bincom. [zeo_pointcloud]
+2024.12.13. Renamed _zPCDDef and _zPCDType to _zPCDFieldType and _zPCDValueType, respectively. [zeo_pointcloud]
+2024.12.12. Modified zeo-config to use liblzf for decoding PCD. [tools]
+2024.12.12. Added ZEO_PCD_DATATYPE_BINARY_COMPRESSED to _zPCDDataType. Added ZEO_PCD_LABEL and ZEO_PCD_RGBA to _zPCDDef. Modified zVec3DDataFReadPCD to allocate point data as a fixed-size array. [zeo_pointcloud]
 2024.12.12. Added zVec6DList class. [zeo_vec6d, zeo_vec6d_list]
 2024.12.12. Added zVecXDDataPrint and zVecXDDataValuePrint, and applied them to zVec2D/3DData. [zeo_vecxd_data, zeo_vec2d_data, zeo_vec3d_data]
 2024.12.11. Modified ZEO_VECXD_DATA_DEF_STRUCT to cope with implicitly deleted constructor. [zeo_vecx_data, zeo_vec2d_data, zeo_vec3d_data]
 2024.12.11. Renamed _zGJKPDInitAddPoint to _zGJKPDAddPoint. [zeo_col_gjk]
 2024.12.10. Renamed _zBoundingBall3DPL to _zBoundingBall3D. [zeo_bv3d_boundingball]
 2024.12. 9. Renamed zVec6DDataFPrint, zVec6DDataPrint, zVec6DDataNLFPrint, and zVec6DDataNLPrint to zVec6DValueFPrint, zVec6DValuePrint, zVec6DValueNLFPrint, and zVec6DValueNLPrint, respectively. [zeo_vec6d]
-2024.12. 9. Reflect new specifications of zVec2DDataAABB, zVec3DDataAABB, zVec3DDataOBB, zVec3DDataBoundingBox, zVec3DDataConvexHull, zVec3DDataConvexHull2D, zGJK, and zMPR. [example, app]
+2024.12. 9. Reflected new specifications of zVec2DDataAABB, zVec3DDataAABB, zVec3DDataOBB, zVec3DDataBoundingBox, zVec3DDataConvexHull, zVec3DDataConvexHull2D, zGJK, and zMPR. [example, app]
 2024.12. 8. Modified zeo_qhull to use zVec3DDataConvexHull. [app]
 2024.12. 8. Modified zeo_gjk to reflect new specification of zGJK. [app]
 2024.12. 8. Modified zMShape3DBoundingBall to use zVec3DDataBoundingBall. [zeo_mshape3d]
