Added ZEO_BOUNDINGBALL_RECURSIVE_DEF_METHOD, and redefined zVec2D/3DDataBoundingBallRecursive by using it. Added ZEO_BOUNDINGBALL_DEF_METHOD, and redefined zVec2D/3DDataBoundingBall by using it. Renamed _zBoundingDisk2DTest2, _zBoundingDisk2DTest3, _zBoundingDisk2D3, _zBoundingDisk2DDirect, _zBoundingDisk2DRecursive, and zVec2DDataBoundingDiskRecursive to _zBoundingBall2DTest2, _zBoundingBall2DTest3, _zBoundingBall2D3, _zBoundingBall2DDirect, _zBoundingBall2DRecursive, and zVec2DDataBoundingBallRecursive, respectively. Renamed zeo_bv2d_boundingdisk to zeo_bv2d_boundingball. Renamed _zBoundingDisk2D and zVec2DDataBoundingDisk to _zBoundingDisk2DRecursive and zVec2DDataBoundingDiskRecursive, respectively. Renamed _zBoundingDisk2DPrim to _zBoundingDisk2DDirect. Abolished ZEO_BOUNDINGBALL_PN_THRESHOLD, and modified zVec3DDataBoundingBallRecursive not to create the convex hull of points. Renamed _zBoundingBall3D and zVec3DDataBoundingBall to _zBoundingBall3DRecursive and zVec3DDataBoundingBallRecursive, respectively. Renamed _zBoundingBall3DPrim to _zBoundingBall3DDirect. Merged _zBoundingDisk2D into _zBoundingDisk2DInc, and renamed _zBoundingDisk2DInc to _zBoundingDisk2D. Merged _zBoundingBall3D into _zBoundingBall3DInc, and renamed _zBoundingBall3DInc to _zBoundingBall3D.

--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,14 @@
+2024.12.28. Added ZEO_BOUNDINGBALL_RECURSIVE_DEF_METHOD, and redefined zVec2D/3DDataBoundingBallRecursive by using it. [zeo_bvxd_boundingball, zeo_bv2d_boundingball, zeo_bv3d_boundingball]
+2024.12.27. Added ZEO_BOUNDINGBALL_DEF_METHOD, and redefined zVec2D/3DDataBoundingBall by using it. [zeo_bvxd_boundingball, zeo_bv2d_boundingball, zeo_bv3d_boundingball]
+2024.12.27. Renamed _zBoundingDisk2DTest2, _zBoundingDisk2DTest3, _zBoundingDisk2D3, _zBoundingDisk2DDirect, _zBoundingDisk2DRecursive, and zVec2DDataBoundingDiskRecursive to _zBoundingBall2DTest2, _zBoundingBall2DTest3, _zBoundingBall2D3, _zBoundingBall2DDirect, _zBoundingBall2DRecursive, and zVec2DDataBoundingBallRecursive, respectively. [zeo_bv2d_boundingball, zeo_voronoi2d]
+2024.12.27. Renamed zeo_bv2d_boundingdisk to zeo_bv2d_boundingball. [zeo_bv2d_boundingball]
+2024.12.27. Renamed _zBoundingDisk2D and zVec2DDataBoundingDisk to _zBoundingDisk2DRecursive and zVec2DDataBoundingDiskRecursive, respectively. [zeo_bv2d_boundingdisk]
+2024.12.27. Renamed _zBoundingDisk2DPrim to _zBoundingDisk2DDirect. [zeo_bv2d_boundingdisk]
+2024.12.27. Abolished ZEO_BOUNDINGBALL_PN_THRESHOLD, and modified zVec3DDataBoundingBallRecursive not to create the convex hull of points. [zeo_bv3d_boundingball]
+2024.12.27. Renamed _zBoundingBall3D and zVec3DDataBoundingBall to _zBoundingBall3DRecursive and zVec3DDataBoundingBallRecursive, respectively. [zeo_bv3d_boundingball]
+2024.12.27. Renamed _zBoundingBall3DPrim to _zBoundingBall3DDirect. [zeo_bv3d_boundingball]
+2024.12.26. Merged _zBoundingDisk2D into _zBoundingDisk2DInc, and renamed _zBoundingDisk2DInc to _zBoundingDisk2D. [zeo_bv2d_boundingdisk]
+2024.12.20. Merged _zBoundingBall3D into _zBoundingBall3DInc, and renamed _zBoundingBall3DInc to _zBoundingBall3D. [zeo_bv3d_boundingball]
 2024.12.15. Added zFrame3DMatch. [zeo_frame3d]
 2024.12.14. Modified DEF_zPCDFieldReadBINCOMFunc to accelerate conversion. [zeo_pointcloud]
 2024.12.13. Abolished ZEO_ERR_PCD_UNKNOWN_FIELDID. [zeo_errmsg, zeo_pointcloud]
