Added zOctree3DVicinity and zVec3DDataNormalVec. Defined ZEO_ERR_OCTREE_POINT_OUTOFREGION. Applied ZEO_ERR_FATAL to _zDelaunay2DUpdate. Corrected misspell of ZEO_ERR_PCD_INVALID_FORMAT. Added const qualifier to some functions. Added zVec3DDataMeanNormal. Modified zVec3DDataPCA to provide the center point. Modified relationships between some modules. Added zVec3DDataMeanPlane. Abolished zPlane3DMean. Reimplemented zVec3DDataBaryPCA. Modified specifications of zVec3DDataPCA and zVec3DDataBaryPCA to store eigenvalues in a specified array, if the pointer is given. Added _zOctant3DDivide and zOctree3DChangeResolution. Renamed zVec3DDataOctree to zOctree3DEmbedPoints. Defined zOctant3D, and reimplemented zOctree3D. Renamed zOctree3DFindOctant to zOctree3DFindContainer.

--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,19 @@
+2025. 1.16. Added zOctree3DVicinity and zVec3DDataNormalVec. [zeo_errmsg, zeo_col_octree]
+2025. 1.16. Defined ZEO_ERR_OCTREE_POINT_OUTOFREGION. [zeo_errmsg, zeo_col_octree]
+2025. 1.16. Applied ZEO_ERR_FATAL to _zDelaunay2DUpdate. [zeo_voronoi2d]
+2025. 1.16. Corrected misspell of ZEO_ERR_PCD_INVALID_FORMAT. [zeo_errmsg]
+2025. 1.16. Added const qualifier to some functions. [zeo_render_color, zeo_render_optic, zeo_bv3d_aabb, zeo_col, zeo_col_box, zeo_col_octree]
+2025. 1.15. Added zVec3DDataMeanNormal. [zeo_vec3d_pca]
+2025. 1.15. Modified zVec3DDataPCA to provide the center point. [zeo_vec3d_pca]
+2025. 1.15. Modified relationships between some modules. [zeo, zeo_mat3d, zeo_shape3d, zeo_vec3d_data, zeo_vec3d_pca, zeo_vec3d_pcd, zeo_bv2d]
+2025. 1.15. Added zVec3DDataMeanPlane. [zeo_vec3d_pca]
+2025. 1.15. Abolished zPlane3DMean. [zeo_elem3d]
+2025. 1.15. Reimplemented zVec3DDataBaryPCA. [zeo_vec3d_pca]
+2025. 1.15. Modified specifications of zVec3DDataPCA and zVec3DDataBaryPCA to store eigenvalues in a specified array, if the pointer is given. [zeo_vec3d_pca]
+2025. 1.15. Added _zOctant3DDivide and zOctree3DChangeResolution. [zeo_col_octree]
+2025. 1.15. Renamed zVec3DDataOctree to zOctree3DEmbedPoints. [zeo_col_octree]
+2025. 1.15. Defined zOctant3D, and reimplemented zOctree3D. [zeo_col_octree]
+2025. 1.15. Renamed zOctree3DFindOctant to zOctree3DFindContainer. [zeo_col_octree]
 2025. 1.13. Added zeo_col_octree. [zeo_col, zeo_col_octree]
 2025. 1.13. Added zColChkSphereAABox3D and zColChkSphereBox3D. [zeo_col_box]
 2025. 1.13. Added zAABox3DClosest and zAABox3DDistFromPoint. [zeo_bv3d_aabb]
