--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,4 @@
+2025. 1.24. Modified zMat3DSVD. [zeo_mat3d]
 2025. 1.24. Added zVec3DDataICP. [zeo_vec3d_profile]
 2025. 1.24. Added zVec3DDataPCAFrame. [zeo_vec3d_pca]
 2025. 1.24. Added zVec3DDataIdentFrame. [zeo_errmsg, zeo_vec3d_profile]
