--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,8 @@
+2025.02.22. Added _zVec3DOctantLeafNN, _zVec3DOctantNN, and zVec3DOctreeNN. [zeo_vec3d_octree]
+2025.02.21. Added _zVec2D/3DListQuickSortDefaultCmp, and defined default quicksort functions by using ZEO_VECXD_LIST_QUICKSORT_DEFAULT. [zeo_vec2d_list, zeo_vec3d_list]
+2025.02.21. Added ZEO_VECXD_LIST_QUICKSORT_DEFAULT_PROTOTYPE and ZEO_VECXD_LIST_QUICKSORT_DEFAULT. [zeo_vecxd_list]
+2025.02.20. Renamed zVec3DTreeAdd and zVec3DTreeAddID to zVec3DTreeAddPoint and zVec3DTreeAddPointID, respectively. [zeo_vec3d_tree, zeo_vec3d_profile]
+2025.02.20. Renamed zVec3DOctreeEmbedPoints to zVec3DOctreeAddData. [zeo_vec3d_octree, zeo_vec3d_profile]
 2025.02.16. Added zVec3DOctreeInitAuto. [zeo_vec3d_octree]
 2025.02.16. Added zAABox3DFPrint. [zeo_elem3d_aabox]
 2025.02.16. Modified zVec3DDataIdentFrame to remove redundant check of singular values. [zeo_vec3d_profile]
