--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,5 @@
+2025.03.02. Modified _zVec3DOctantVicinity to resolve logical incompleteness. [zeo_vec3d_octree]
+2025.03.02. Modified _zVec3DTreeIsOverlap to avoid circumscribed cases. [zeo_vec3d_tree]
 2025.02.23. Abolished zVec3DTreeAddPointID. [zeo_vec3d_tree]
 2025.02.22. Added _zVec3DOctantLeafNN, _zVec3DOctantNN, and zVec3DOctreeNN. [zeo_vec3d_octree]
 2025.02.21. Added _zVec2D/3DListQuickSortDefaultCmp, and defined default quicksort functions by using ZEO_VECXD_LIST_QUICKSORT_DEFAULT. [zeo_vec2d_list, zeo_vec3d_list]
