Added ZEO_VECXD_DATA_VICINITY_PROTOTYPE and ZEO_VECXD_DATA_VICINITY. Modified _zVec3DTreeIsOverlap, _zVec3DTreeNNTest, and _zVec3DTreeVicinityTest to evaluate squared distance. Renamed zVec3DTreeVicinity to _zVec3DTreeVicinity, and reimplemented zVec3DTreeVicinity to initialize vicinity data inside. Modified zVec3DOctreeVicinity to initialize vicinity data inside. Modified _zVec3DOctantNN and _zVec3DOctantVicinity to use zAABox3DSqrDistFromPoint. Reimplemented _zVec3DTreeIsOverlap as a macro. Added zAABox3DSqrDistFromPoint, and reimplemented zAABox3DDistFromPoint. Replaced members vmin and vmax of zVec3DTreeData with region. Renamed member v of zVec3DTreeData to point.

--- a/HISTORY
+++ b/HISTORY
@@ -1,5 +1,14 @@
-2025.03.02. Modified _zVec3DOctantVicinity to resolve logical incompleteness. [zeo_vec3d_octree]
-2025.03.02. Modified _zVec3DTreeIsOverlap to avoid circumscribed cases. [zeo_vec3d_tree]
+2025.03.02. Added ZEO_VECXD_DATA_VICINITY_PROTOTYPE and ZEO_VECXD_DATA_VICINITY. [zeo_vecxd_data, zeo_vec2d_data, zeo_vec3d_data]
+2025.03.01. Modified _zVec3DTreeIsOverlap, _zVec3DTreeNNTest, and _zVec3DTreeVicinityTest to evaluate squared distance. [zeo_vec3d_tree]
+2025.03.01. Renamed zVec3DTreeVicinity to _zVec3DTreeVicinity, and reimplemented zVec3DTreeVicinity to initialize vicinity data inside. [zeo_vec3d_tree]
+2025.03.01. Modified zVec3DOctreeVicinity to initialize vicinity data inside. [zeo_vec3d_octree]
+2025.03.01. Modified _zVec3DOctantNN and _zVec3DOctantVicinity to use zAABox3DSqrDistFromPoint. [zeo_vec3d_octree]
+2025.03.01. Reimplemented _zVec3DTreeIsOverlap as a macro. [zeo_vec3d_tree]
+2025.03.01. Added zAABox3DSqrDistFromPoint, and reimplemented zAABox3DDistFromPoint. [zeo_elem3d_aabox]
+2025.03.01. Replaced members vmin and vmax of zVec3DTreeData with region. [zeo_vec3d_tree]
+2025.03.01. Renamed member v of zVec3DTreeData to point. [zeo_vec3d_tree, zeo_ph_stl, zeo_vec3d_profile]
+2025.03.01. Modified _zVec3DOctantVicinity to resolve logical incompleteness. [zeo_vec3d_octree]
+2025.03.01. Modified _zVec3DTreeIsOverlap to avoid circumscribed cases. [zeo_vec3d_tree]
 2025.02.23. Abolished zVec3DTreeAddPointID. [zeo_vec3d_tree]
 2025.02.22. Added _zVec3DOctantLeafNN, _zVec3DOctantNN, and zVec3DOctreeNN. [zeo_vec3d_octree]
 2025.02.21. Added _zVec2D/3DListQuickSortDefaultCmp, and defined default quicksort functions by using ZEO_VECXD_LIST_QUICKSORT_DEFAULT. [zeo_vec2d_list, zeo_vec3d_list]
