Modified _zVec3DOctantAllocSuboctant to copy the normal vector to suboctants. Modified _zVec3DOctantDivide and _zVec3DOctantMerge to update normal vectors. Added _zVec3DOctantUpdateNormal and zVec3DOctreeUpdateNormal. Renamed _zVec3DOctantNormal to _zVec3DOctantEstimateNormal. Renamed member _cov of zVec3DOctant to _ncov. Abolished zVec3DDataAddAndUpdateCov, and zVec3DDataAddAndUpdateBaryCov. Debugged zVec3DDataCov and zVec3DDataBaryCov to divide the matrix by the number of points. Modified _zVec3DOctantDivide, and _zVec3DOctantMerge to update variance-covariance matrix and estimate normal vector. Added _zVec3DOctantNormal. Modified _zVec3DOctantAllocSuboctant, _zVec3DOctantAddPoint and _zVec3DOctantDivide to use center of region. Added member center of zVec3DOctant, and modified _zVec3DOctantSetRegion, _zVec3DOctantDestroy, _zVec3DOctantAllocSuboctant, _zVec3DOctantAddPoint, _zVec3DOctantDivide, and _zVec3DOctantMerge.

--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,15 @@
+2025.03.31. Modified _zVec3DOctantAllocSuboctant to copy the normal vector to suboctants. [zeo_vec3d_octree]
+2025.03.31. Modified _zVec3DOctantDivide and _zVec3DOctantMerge to update normal vectors. [zeo_vec3d_octree]
+2025.03.31. Added _zVec3DOctantUpdateNormal and zVec3DOctreeUpdateNormal. [zeo_vec3d_octree]
+2025.03.31. Renamed _zVec3DOctantNormal to _zVec3DOctantEstimateNormal. [zeo_vec3d_octree]
+2025.03.31. Renamed member _cov of zVec3DOctant to _ncov. [zeo_vec3d_octree]
+2025.03.31. Abolished zVec3DUpdateCov, zVec3DUpdateBaryCov, zVec3DDataAddAndUpdateCov, and zVec3DDataAddAndUpdateBaryCov. [zeo_vec3d_pca]
+2025.03.30. Debugged zVec3DDataCov and zVec3DDataBaryCov to divide the matrix by the number of points. [zeo_vec3d_pca]
+2025.03.29. Modified _zVec3DOctantDivide, and _zVec3DOctantMerge to update variance-covariance matrix and estimate normal vector. [zeo_vec3d_octree]
+2025.03.29. Added _zVec3DOctantNormal. [zeo_vec3d_octree]
+2025.03.29. Modified _zVec3DOctantAllocSuboctant, _zVec3DOctantAddPoint and _zVec3DOctantDivide to use center of region. [zeo_vec3d_octree]
+2025.03.29. Added member center of zVec3DOctant, and modified _zVec3DOctantSetRegion, _zVec3DOctantDestroy, _zVec3DOctantAllocSuboctant, _zVec3DOctantAddPoint, _zVec3DOctantDivide, and _zVec3DOctantMerge. [zeo_vec3d_octree]
+2025.03.29. Added zVec3DUpdateCov and zVec3DUpdateBaryCov. [zeo_vec3d_pca]
 2025.03.29. Modified zVec3DDataMeanNormal and zVec3DDataMeanPlane. [zeo_vec3d_pca]
 2025.03.29. Added zMat3DSymEigMin. [zeo_mat3d]
 2025.03.28. Added zVec3DDataAddAndUpdateCov. [zeo_vec3d_pca]
