Redefined _zMat2DTDRC by using zSwap. Added operator << to methods of zVec2D, zVec3D, zVec6D, zMat2D, and zMat3D in C++. Added _zMat2DSqrNorm, zMat2DSqrNorm, _zMat2DNorm, and zMat2DNorm. Added _zMat2DAddDRC, _zMat2DSubDRC, _zMat2DRevDRC, _zMat2DMulDRC, _zMat2DDivDRC, and _zMat2DCatDRC. Changed specifications of zMat2DRow and zMat2DCol. Added _zMat2DRow, _zMat2DTDRC, and zMat2DTDRC. Added _zMat2DIsIdent, zMat2DIsIdent, _zMat2DIsTol, zMat2DIsTol, _zMat2DIsTiny, and zMat2DIsTiny.

--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,10 @@
+2025.05.10. Redefined _zMat2DTDRC by using zSwap. [zeo_mat2d]
+2025.05.09. Added operator << to methods of zVec2D, zVec3D, zVec6D, zMat2D, and zMat3D in C++. [zeo_vec2d, zeo_vec3d, zeo_vec6d, zeo_mat2d, zeo_mat3d]
+2025.05.09. Added _zMat2DSqrNorm, zMat2DSqrNorm, _zMat2DNorm, and zMat2DNorm. [zeo_mat2d]
+2025.05.09. Added _zMat2DAddDRC, _zMat2DSubDRC, _zMat2DRevDRC, _zMat2DMulDRC, _zMat2DDivDRC, and _zMat2DCatDRC. [zeo_mat2d]
+2025.05.09. Changed specifications of zMat2DRow and zMat2DCol. [zeo_mat2d]
+2025.05.09. Added _zMat2DRow, _zMat2DTDRC, and zMat2DTDRC. [zeo_mat2d]
+2025.05.09. Added _zMat2DIsIdent, zMat2DIsIdent, _zMat2DIsTol, zMat2DIsTol, _zMat2DIsTiny, and zMat2DIsTiny. [zeo_mat2d]
 2025.05.08. Added _zOBJFReadVert, _zOBJFReadFaceIndex, and _zOBJFReadFace, and modified _zOBJFReadPH3D. [zeo_ph3d_obj]
 2025.05.08. Debugged _zOBJFReadPH3D to read indices of vertices of faces even in cases where normal vectors and texture vertices are unassigned. [zeo_ph3d_obj]
 2025.05.08. Defined ZEO_ERR_NOVERT, and modified zPH3DFReadOBJ. [zeo_errmsg, zeo_ph3d_obj]
