--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,6 @@
+2025.05.18. Added zFrame3DToZTK to output a fancy-formatted string. [zeo_frame3d]
+2025.05.17. Modified zVec3DToZTK and zMat3DToZTK to output a fancy-formatted string. [zeo_vec3d, zeo_mat3d]
+2025.05.17. Modified zVec3DFromZTK, zMat3DFromZTK, and zFrame3DFromZTK to be able to read a fancy-formatted string. [zeo_vec3d, zeo_mat3d]
 2025.05.11. Removed register qualifiers from example codes. [example]
 2025.05.11. Modified zMShape3DVertData to remove an ERROR label. [zeo_mshape3d]
 2025.05.10. Redefined _zMat2DTDRC by using zSwap. [zeo_mat2d]
