--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,4 @@
+2025.05.20. Added const qualifiers to arguments of functions in zeo_shape3d_list. [zeo_shape3d_list]
 2025.05.18. Debugged zVec3DFromZTK, zMat3DFromZTK, and zFrame3DFromZTK. [zeo_vec3d, zeo_mat3d, zeo_frame3d]
 2025.05.18. Added zFrame3DToZTK to output a fancy-formatted string. [zeo_frame3d]
 2025.05.17. Modified zVec3DToZTK and zMat3DToZTK to output a fancy-formatted string. [zeo_vec3d, zeo_mat3d]
