--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,4 @@
+2025.07.14. Added zCoord2DCopy, _zCoord2DAdd, _zCoord2DSub, _zCoord2DCat, _zCoord2DAddDRC, _zCoord2DSubDRC, _zCoord2DCatDRC, zCoord2DAdd, zCoord2DSub, zCoord2DCat, zCoord2DAddDRC, zCoord2DSubDRC, and zCoord2DCatDRC. [zeo_coord2d]
 2025.05.20. Added const qualifiers to arguments of functions in zeo_shape3d_list. [zeo_shape3d_list]
 2025.05.18. Debugged zVec3DFromZTK, zMat3DFromZTK, and zFrame3DFromZTK. [zeo_vec3d, zeo_mat3d, zeo_frame3d]
 2025.05.18. Added zFrame3DToZTK to output a fancy-formatted string. [zeo_frame3d]
