--- a/HISTORY
+++ b/HISTORY
@@ -1,4 +1,4 @@
-2025.07.16. _zCoord2DIsTol, zCoord2DIsTol, _zCoord2DIsTiny, and zCoord2DIsTiny. [zeo_coord2d]
+2025.07.16. Added _zCoord2DIsTol, zCoord2DIsTol, _zCoord2DIsTiny, and zCoord2DIsTiny. [zeo_coord2d]
 2025.07.15. Added C++ methods of zShape3D class. [zeo_shape3d]
 2025.07.15. Modified zShape3DToPH. [zeo_shape3d]
 2025.07.15. Added _zCoord2DMul, _zCoord2DMulDRC, zCoord2DMul, zCoord2DDiv, zCoord2DMulDRC, and zCoord2DDivDRC. [zeo_coord2d]
